force-app/main/default/objects/Account_Business_Plan__c/Account_Business_Plan__c.object-meta.xml
<CustomObject>
    <label>Account Business Plan</label>
    <nameField>
        <label>Account Business Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Business Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>