force-app/main/default/objects/Account_Business_Plan__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Business plans</relationshipLabel>
    <relationshipName>Account_Business_plans</relationshipName>
    <type>Lookup</type>
</CustomField>