force-app/main/default/objects/Account_Business_Plan__c/fields/Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>Next_Steps__c</fullName>
    <inlineHelpText>Next steps for the account.</inlineHelpText>
    <label>Next Steps</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>