force-app/main/default/objects/Account_Business_Plan__c/fields/Plan_Status__c.field-meta.xml
<CustomField>
    <fullName>Plan_Status__c</fullName>
    <label>Plan Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>