force-app/main/default/objects/Account_Business_Plan__c/fields/Plan_Text__c.field-meta.xml
<CustomField>
    <fullName>Plan_Text__c</fullName>
    <inlineHelpText>The text of the business plan for the account.</inlineHelpText>
    <label>Plan Text</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>