force-app/main/default/objects/Account_Business_Plan__c/fields/Planned_Activities__c.field-meta.xml
<CustomField>
    <fullName>Planned_Activities__c</fullName>
    <inlineHelpText>Planned activities for the account.</inlineHelpText>
    <label>Planned Activities</label>
    <length>200</length>
    <type>Text</type>
</CustomField>