force-app/main/default/objects/Account_Business_Plan__c/fields/Target_Margin__c.field-meta.xml
<CustomField>
    <fullName>Target_Margin__c</fullName>
    <inlineHelpText>The target margin for the account.</inlineHelpText>
    <label>Target Margin</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>