force-app/main/default/objects/Account_Business_Plan__c/fields/Target_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Target_Revenue__c</fullName>
    <inlineHelpText>The target revenue for the account.</inlineHelpText>
    <label>Target Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>